# PZP

./: Makefile  PZP.py  README.md  pyproject.toml  pzp.c  pzp.h  pzp_lib.c  setup.py
scripts/: benchmark.py  checkParity.sh  compare_load_speed.py  convertAllFilesInDirectoryToPZP.sh  convertToPZP.sh  convertToPZP1Ch16Bit.sh  convertToPZP3Ch8Bit.sh  encode_directory.py  viewPZP.sh
src/pzp/: __init__.py
